<resources>
    <string name="app_name">Zait</string>

    <!-- Classic -->
    <string name="in">in</string>
    <string name="comment">Comment</string>
    <string name="comment_plur">Comments</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">ADD</string>
    <string name="point">point</string>
    <string name="points">points</string>
    <string name="answer">answer</string>
    <string name="answers">answers</string>
    <string name="more">More</string>

    <string name="search">Search...</string>

    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="appearance">Appearance</string>

    <!-- Navigation Menu -->
    <string name="navigation_loggedout">Logged out</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_mysubreddits">My Subreddits</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_settings">Settings</string>
    <string name="add_an_account">Add an account</string>

    <!-- Subreddit Menu -->
    <string name="action_hot">Hot</string>
    <string name="action_new">New</string>
    <string name="action_rising">Rising</string>
    <string name="action_top">Top</string>
    <string name="action_controversial">Controversial</string>

    <!-- Accessibility -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- Dialogs -->
    <string name="dialog_login_title">Log in to Reddit</string>
    <string name="dialog_login_enter_name">Enter Name</string>
    <string name="dialog_login_enter_passwd">Enter Password</string>
    <string name="dialog_login_login">Login</string>

    <string name="dialog_delete_subreddit_title">Delete Subreddit</string>

    <string name="dialog_reinit_subreddits_title">Reinitialization</string>
    <string name="dialog_reinit_subreddits_message">Reset subreddits?</string>

    <string name="dialog_add_subreddit_title">Add a new Subreddit...</string>
    <string name="dialog_add_subreddit_enter_name">Enter Name</string>

    <!-- Errors -->
    <string name="connection_error">Network connection error</string>
    <string name="check_internet_settings">Check your internet connection settings</string>
    <string name="search_length_error">Query must be minimum 2 characters long</string>
    <string name="no_result_found">No result found</string>

    <!-- Titles -->
    <string name="my_subreddits_title">Subreddits</string>

    <!-- Settings -->
    <string name="general_title">General</string>
    <string name="general_subtitle">Tips, Animations, Pre-fetch</string>
    <string name="appearance_title">Appearance</string>
    <string name="appearance_subtitle">Text size, fonts, View type</string>

    <string name="tips">Tips</string>
    <string name="animations">Animations</string>
    <string name="display_tips">Display Tips</string>
    <string name="comment_navigation">Comment Navigation</string>
    <string name="fade_in_thumbnail">Fade in Thumbnail</string>
    <string name="application">Application</string>
    <string name="theme">Theme</string>
    <string name="text_size">Text Size</string>

    <!-- Splash screen -->
    <string name="an_app_for_reddit">An app for Reddit</string>

    <!-- App Widget -->
    <string name="no_post">No Post in selected subreddit</string>
    <string name="retrieving_post">Trying to get latest posts...</string>

</resources>
