<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".SubredditActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_home"/>
        <item
            android:id="@+id/nav_mysubreddits"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/navigation_mysubreddits"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/navigation_search"/>
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/navigation_settings"/>
        </menu>
    </item>

</menu>
