<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor">

            <LinearLayout
                android:id="@+id/settings_back_arrow"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:layout_width="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:text="@string/general"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tips"
            style="@style/SubSettingTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/display_tips"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                style="@style/SubSettingOptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <android.support.v7.widget.SwitchCompat
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <TextView
            android:text="@string/animations"
            style="@style/SubSettingTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/comment_navigation"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                style="@style/SubSettingOptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <CheckBox
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <include layout="@layout/single_gray_line"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/fade_in_thumbnail"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                style="@style/SubSettingOptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <CheckBox
                android:gravity="center_vertical"
                android:checked="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>