<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor">

            <LinearLayout
                android:id="@+id/settings_back_arrow"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:layout_width="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:text="@string/appearance"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/application"
            style="@style/SubSettingTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/theme"
            android:text="@string/theme"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/simple_ripple_effect"
            style="@style/SubSettingOptionStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <include layout="@layout/single_gray_line"/>

        <TextView
            android:id="@+id/text_size"
            android:text="@string/text_size"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/simple_ripple_effect"
            style="@style/SubSettingOptionStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>


    </LinearLayout>


</LinearLayout>